fix(dropdown-input) remove spacing above dropdown
- remove unnecessary spacing above the dropdown
 in the input

[Delivers #162181076]

--- a/src/components/Forms/ProfileForm/ProfileForm.scss
+++ b/src/components/Forms/ProfileForm/ProfileForm.scss
@@ -38,10 +38,6 @@ form .form-input .profile_dropdown .select-menu {
   top: 30px;
 }
 
-form .form-input .request_dropdown .select-menu{
-  top: 26px
-}
-
 .spaces .request_dropdown .select-menu{
   top: 35px
 }
@@ -49,7 +45,6 @@ form .form-input .request_dropdown .select-menu{
 form .form-input .select-menu{
   position: absolute;
   left: -0.05px;
-  top: 40px;
   width: calc(100% + -1px);
   color: #4F4F4F;
   font-family: 'DIN Pro';
